# aithena-services

./: pyproject.toml
api/: config.json  funcs.py
chatbot-dash/: pyproject.toml
chatbot-dash/src/chatbot_dash/: chatbot.py  chatbot_pydantic.py  config.py  main.py  main_pydantic.py
dashboard/: nohup.out  sol_edit_llmlabel_fapi.py
docker/: Dockerfile  build-docker.sh  variables.env
docker/config/: config.json
src/aithena_services/: envvars.py
src/aithena_services/embeddings/: ollama.py
tests/aithena_services/: test_azure_aithena.py
