[tool.poetry]
name = "chatbot-dash"
version = "0.1.0"
description = ""
authors = ["Camilo Velez <camilo.velez@axleinfo.com>, Antoine Gerardin <antoine.gerardin@nextonicsolutions.com>"]
readme = "README.md"
packages = [{include = "chatbot_dash", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# aithena-services= {path="..", develop=true}
aithena-services = {git = "https://github.com/agerardin/aithena-services.git", branch = "feat/integration"}
solara = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
check-untyped-defs = true
disallow_untyped_defs = true